--- a/css/styles.css
+++ b/css/styles.css
@@ -182,9 +182,7 @@ nav.menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba(46, 47, 66, 1);
     background-image: url(https://cresevel.github.io/goit-markup-hw-04/images/homepage-banner.png);
-    background-repeat: no-repeat;
     text-align: center;
     background-position: center;
 }
@@ -195,7 +193,6 @@ nav.menu {
     width: 100%;
     height: 600px;
     background-color: rgba(46, 47, 66, 0.7);
-    background-position: center;
 }
 
 
@@ -440,6 +437,7 @@ ul.section-two-items {
     padding: 0 156px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-start;
     gap: 24px;
 }
@@ -846,7 +844,15 @@ footer p {
     }
 
     .menu-button {
-        margin-left: 51px;
+        margin-left: 168px;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .navigation-contact {
+        display: none;
     }
 
     .container {
@@ -854,12 +860,41 @@ footer p {
         margin: 0 auto;
     }
 
-.webstudio {
-    margin: 0px 0px 0px 105px;
-}
+    .webstudio {
+        margin: 0;
+    }
+
+    h1.banner-text {
+        padding: 100px 0px 72px 0px;
+        font-size: 30px;
+        line-height: 40px;
+    }
+
+    .home-banner {
+        height: 432px;
+        width: 100%;
+    }
+
+    .banner-overlay {
+    width: 100%;
+    height: 432px;
+    }
+
+    .section-one-icon-bg {
+    display: none;
+    }
+
+    ul.section-one-items {
+        padding-top: 32px;
+        text-align: center;
+    }
 
     .section-two {
         display: none;
+    }
+
+    ul.section-three-items {
+        margin: 72px 28px;
     }
 }
 
