--- a/css/styles.css
+++ b/css/styles.css
@@ -827,25 +827,121 @@ footer p {
     flex-wrap: wrap;
 }
 
+
+/* Mobie Version */
+.menu-toggle {
+    min-height: 22px;
+    min-width: 32px;
+    padding: 0;
+    background: transparent;
+    outline: none;
+    border: none;
+}
+
+.js-menu-container.is-open {
+    transform: translateX(0);
+}
+
+.js-menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 35px;
+    padding-right: 20px;
+    padding-left: 25px;
+    background-color: #FFF;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    min-height: 24px;
+    min-width: 24px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 1px solid #2E2F42;
+    background-color: #E7E9FC;
+}
+
+.hamburger-menu-item {
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    margin-bottom: 40px;
+}
+
+    .hamburger-menu-link.link.menu-active {
+            color: #404BBF;
+}
+
+.hamburger-address-phone {
+    color: #4D5AE5;
+    font-family: Roboto;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.hamburger-address-email {
+    color: #434455;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    margin-top: 40px;
+    margin-bottom: 56px;
+}
+
+ul.hamburger-social-list.list {
+    display: flex;
+    flex-direction: row;
+    gap: 22px;
+}
+
+
 /* Media Query */
 
-/* Screen 1440px */
-
 @media screen and (min-width: 1440px) {
-    .menu-button {
+    .menu-icon {
         position: absolute;
         visibility: hidden;
+    }
+
+    .mobile-menu-container {
+        display: none;
+    }
+
+    button.menu-toggle.js-open-menu {
+        display: none;
     }
 }
 
 @media (min-width: 320px) and (max-width: 428px) {
-    svg.menu-icon {
-        fill: #434455;
-    }
-
-    .menu-button {
-        margin-left: 168px;
-    }
 
     .navigation {
         display: none;
@@ -878,6 +974,29 @@ footer p {
     .banner-overlay {
     width: 100%;
     height: 432px;
+    }
+
+    .modal {
+        width: 308px;
+        height: 542px;
+        padding: 9px;
+    }
+
+    .modal-form-name,
+    .modal-form-phone,
+    .modal-form-email {
+        width: 280px;
+        height: 45px;
+        padding-left: 38px;
+    }
+
+    .modal-form-comment {
+        width: 280px;
+        height: 87px;
+    }
+
+    .modal-terms-field {
+        flex-wrap: wrap;
     }
 
     .section-one-icon-bg {
@@ -928,13 +1047,19 @@ footer p {
 }
 
 @media screen and (min-width: 428px) and (max-width: 768px) {
-    svg.menu-icon {
-        fill: #434455;
+    .container {
+        min-width: 768px;
+        margin: 0 auto;
     }
 
-    .menu-button {
-        margin-left: 168px;
+    .menu-icon {
+        position: absolute;
     }
+    
+    .mobile-menu-container {
+        position: absolute;
+    }
+    
     
     .navigation {
         display: none;
@@ -943,11 +1068,7 @@ footer p {
     .navigation-contact {
         display: none;
     }
-    
-    .container {
-        min-width: 768px;
-        margin: 0 auto;
-    }
+
     
     .webstudio {
         margin: 0;
@@ -1038,3 +1159,35 @@ footer p {
         gap: 24px;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1199px) {
+    .container {
+        min-width: 769px;
+        margin: 0 auto;
+    }
+
+    .navigation-contact li {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .webstudio {
+        margin: 0;
+        font-size: 16px;
+    }
+
+    .navigation {
+        padding: 0 0 0 118px;
+        font-size: 16px;
+    }
+    
+    .navigation li a {
+        display: block;
+        padding: 9px 0px 0px 0px;
+        margin: 0 45px;
+    }
+
+    .logo {
+        font-size: 16px;
+    }
