--- a/css/styles.css
+++ b/css/styles.css
@@ -827,30 +827,34 @@ footer p {
     flex-wrap: wrap;
 }
 
+/* Mobile View */
 
-/* Mobie Version */
 .menu-toggle {
-    min-height: 22px;
-    min-width: 32px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    min-height: 40px;
+    min-width: 40px;
     padding: 0;
-    background: transparent;
+    background-color: transparent;
     outline: none;
     border: none;
 }
 
-.js-menu-container.is-open {
+.menu-container.is-open {
     transform: translateX(0);
 }
 
-.js-menu-container {
+.menu-container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    padding-top: 35px;
-    padding-right: 20px;
-    padding-left: 25px;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    padding-right: 35px;
+    padding-left: 19px;
     background-color: #FFF;
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
     transform: translateX(100%);
@@ -866,16 +870,17 @@ footer p {
 .mobile-close-btn {
     position: absolute;
     top: 24px;
-    right: 24px;
-    min-height: 24px;
+    right: 22px;
     min-width: 24px;
+    min-height: 24px;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: 1px solid #2E2F42;
+    border: 1px solid rgba(46, 47, 66, 0.1);
     background-color: #E7E9FC;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border;
 }
 
 .hamburger-menu-item {
@@ -890,8 +895,8 @@ footer p {
     margin-bottom: 40px;
 }
 
-    .hamburger-menu-link.link.menu-active {
-            color: #404BBF;
+.hamburger-menu-link.link.menu-active:active {
+    color: #4D5AE5;
 }
 
 .hamburger-address-phone {
@@ -917,162 +922,35 @@ footer p {
     margin-bottom: 56px;
 }
 
-ul.hamburger-social-list.list {
+.hamburger-social-list.list {
     display: flex;
     flex-direction: row;
     gap: 22px;
 }
 
 
-/* Media Query */
+/* Media Queries */
 
-/* 320px Width */
-@media (min-width: 320px) and (max-width: 428px) {
-
-    .navigation {
-        display: none;
-    }
-
-    .navigation-contact {
-        display: none;
-    }
-
+@media only screen and (min-width: 428px) and (max-width: 767px) {
     .container {
-        min-width: 320px;
+        width: 775px;
         margin: 0 auto;
-    }
-
-    .webstudio {
-        margin: 0;
-    }
-
-    h1.banner-text {
-        padding: 100px 0px 72px 0px;
-        font-size: 30px;
-        line-height: 40px;
-    }
-
-    .home-banner {
-        height: 432px;
-        width: 100%;
-    }
-
-    .banner-overlay {
-    width: 100%;
-    height: 432px;
-    }
-
-    .modal {
-        width: 308px;
-        height: 542px;
-        padding: 9px;
-    }
-
-    .modal-form-name,
-    .modal-form-phone,
-    .modal-form-email {
-        width: 280px;
-        height: 45px;
-        padding-left: 38px;
-    }
-
-    .modal-form-comment {
-        width: 280px;
-        height: 87px;
-    }
-
-    .modal-terms-field {
-        flex-wrap: wrap;
-    }
-
-    .section-one-icon-bg {
-    display: none;
-    }
-
-    ul.section-one-items {
-        padding-top: 32px;
-        text-align: center;
-    }
-
-    .section-two {
-        display: none;
-    }
-
-    ul.section-three-items {
-        margin: 72px 28px;
-    }
-
-    footer {
-        text-align: center;
-    }
-
-    footer p {
-        width: 320px;
-        margin: 27px 0;
-        padding: 0px 28px;
-    }
-
-    .social-media-title {
-        margin: 0;
-        padding: 0;
-    }
-
-    .socmed-icons-footer {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 16px;
-    }
-    .footer-email-field {
-        margin: 25px 0;
-        padding: 0 11px;
-        width: 295px;
-        height: 38px;
     }
 }
 
-/* Mobile */
-@media screen and (min-width: 429px) and (max-width: 768px) {
-    .container {
-        min-width: 768px;
-        margin: 0 auto;
-    }
-
-    .menu-toggle {
-        position: absolute;
-        top: 6px;
-        right: 25px;
-    }
-
-   .menu-icon {
-       position: absolute;
-       top: 22px;
-       right: 22px;
-   }
-
-    .mobile-menu-container {
-        position: absolute;
-    }
-    
-    
-    .navigation {
-        display: none;
-    }
-    
+@media only screen and (min-width: 428px) and (max-width: 767px), only screen and (max-width: 427px) {
+    .navigation,
     .navigation-contact {
         display: none;
     }
 
-    
     .webstudio {
         margin: 0;
     }
-
     .section-two {
         display: none;
     }
-    
+
     h1.banner-text {
         text-align: center;
         display: flex;
@@ -1081,13 +959,13 @@ ul.hamburger-social-list.list {
         padding: 188px 0px 48px 0px;
         margin: 0;
         color: #FFF;
-        font-size: 56px;
+        font-size: 40px;
         font-weight: 700;
-        line-height: 60px;
+        line-height: 48px;
         font-family: 'Roboto';
     }
-    
-    
+
+
     .order-button {
         display: flex;
         flex-wrap: wrap;
@@ -1101,9 +979,44 @@ ul.hamburger-social-list.list {
         font-size: 16px;
         border-radius: 6px;
     }
-    
+
+    .modal {
+        width: 100%;
+        height: 584px;
+        padding: 11px;
+    }
+
+    .modal-form-name,
+    .modal-form-phone,
+    .modal-form-email {
+        width: 390px;
+        height: 49px;
+        border: 1px solid #8E8F99;
+        border-radius: 4px;
+        padding-left: 38px;
+    }
+
+    .modal-form-comment {
+        width: 390px;
+        height: 87px;
+        border: 1px solid #8E8F99;
+        border-radius: 4px;
+    }
+
     ul.section-one-items {
-        gap: 85px;
+        display: block;
+        text-align: center;
+    }
+
+    li.strategy,
+    li.punctuality,
+    li.diligence,
+    li.technologies {
+        display: inline-block;
+    }
+
+    .p-section-one {
+        text-align: left;
     }
 
     .section-one-icon-bg {
@@ -1113,7 +1026,7 @@ ul.hamburger-social-list.list {
     .customers ul {
         gap: 11px;
     }
-    
+
     .form-footer {
         text-align: left;
         display: flex;
@@ -1125,7 +1038,7 @@ ul.hamburger-social-list.list {
         text-align: left;
     }
 
-    
+
     .form-footer button {
         margin-top: 20px;
     }
@@ -1139,12 +1052,12 @@ ul.hamburger-social-list.list {
         height: 40px;
         width: 165px;
     }
-    
+
     .footer p {
         text-align: left;
         margin-right: 0;
     }
-    
+
     ul.section-three-items {
         margin: 72px auto;
         display: flex;
@@ -1152,54 +1065,5 @@ ul.hamburger-social-list.list {
         flex-wrap: wrap;
         padding-bottom: 88px;
         gap: 24px;
-    }
-}
-
-/* Tablet */
-
-@media screen and (min-width: 769px) and (max-width: 1199px) {
-    .container {
-        min-width: 769px;
-        margin: 0 auto;
-    }
-
-    .navigation-contact li {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-
-    .webstudio {
-        margin: 0;
-        font-size: 16px;
-    }
-
-    .navigation {
-        padding: 0 0 0 118px;
-        font-size: 16px;
-    }
-    
-    .navigation li a {
-        display: block;
-        padding: 9px 0px 0px 0px;
-        margin: 0 45px;
-    }
-
-    .logo {
-        font-size: 16px;
-    }
-
-@media screen and (min-width: 1440px) {
-    .menu-icon {
-        position: absolute;
-        visibility: hidden;
-    }
-
-    .mobile-menu-container {
-        display: none;
-    }
-
-    button.menu-toggle.js-open-menu {
-        display: none;
     }
 }
