--- a/css/styles.css
+++ b/css/styles.css
@@ -1067,3 +1067,45 @@ footer p {
         gap: 24px;
     }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+    .container {
+        width: 775px;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1199px),
+only screen and (max-width: 767px) {
+    .navigation {
+            padding: 0px 0px 10px 218px;
+            line-height: 0px;
+        }
+    .navigation-contact {
+        width: 208px;
+        line-height: 0px;
+    }
+
+    .webstudio {
+        margin: 0px 0px 0px 0px;
+    }
+
+    h1.banner-text {
+        padding: 188px 109px 48px 109px;
+    }
+
+    .section-one-icon-bg {
+        display: none;
+    }
+
+    ul.section-three-items {
+        margin: 72px 251px;
+        display: flex;
+        flex-wrap: wrap;
+        padding-bottom: 88px;
+        gap: 24px;
+    }
+    .customers ul {
+        padding: 0px 30px;
+    }
+}
